Fixed preview view, was off-centrered

--- a/src/app/styles/style.css
+++ b/src/app/styles/style.css
@@ -272,7 +272,6 @@ body div { padding-top: 0px; }
 	-webkit-box-orient: vertical;
 	-webkit-box-align: center;
 	-webkit-box-pack: center;
-	margin-left: 20px;
 }
 
 .flip {
